--- a/Semana-01/index.html
+++ b/Semana-01/index.html
@@ -6,11 +6,48 @@
         <meta name="descripcion" content="" />
         <meta name="author" content="" />
         <meta name="keywords" content="" />
-        <title>Titulo de mi pagina web</title>
+        <title>Trackgenix</title>
     </head>
 
     <body>
-        
+        <header>
+            <h1>Trackgenix</h1>
+            <h2>By GigaTech Software Solutions SA</h2>
+            <p>
+                "The company GigaTech Software Solutions SA provides software
+                 development services to other companies,
+                 which have too many employees.
+                 Because of this "Trackgenix" was created.
+            </p>
+            <p>
+                “Trackgenix” is a web page that facilitates the registration of
+                 hours worked by each employee in each project and provides 
+                 information to the companies so they can make better decisions.
+            </p>  
+            <img src="assets/alex-kotliarskyi-QBpZGqEMsKg-unsplash 1.png" 
+            alt="Background image">     
+        </header>
+        <aside>
+            <section>
+                <h2>Trackgenix</h2>
+                <img src="assets/icons/Icon.png" alt="Home icon">
+                <h3>Home</h3>
+                <img src="" alt="SignUp icon">
+                <h3>SignUp</h3>
+                <img src="" alt="LogIn icon">
+                <h3>LogIn</h3>
+            </section>
+            <section>
+                <h3>Contact Us</h3>
+                <img src="assets/Icons/MessageIcon.png" alt="Mail icon">
+                <p><a href="mail.google.com">trackgenix@gmail.com</a></p>
+                <img src="assets/Icons/Call.png" alt="Call icon">
+                <p>(000) 000-0000</p>
+                <img src="assets/Icons/Home work.png" alt="Location icon">
+                <p>1234 Somewhere Road #8254 Nashville, TN 00000-0000</p>
+            </section>
+        </aside>
+
     </body>
 
 </html>
