icons rename for better usage

--- a/Semana-01/index.html
+++ b/Semana-01/index.html
@@ -30,20 +30,20 @@
         <aside>
             <section>
                 <h2>Trackgenix</h2>
-                <img src="assets/icons/Icon.png" alt="Home icon">
+                <img src="assets/icons/Home icon.png" alt="Home icon">
                 <h3>Home</h3>
-                <img src="" alt="SignUp icon">
+                <img src="assets/Icons/Sign in-up icon.png" alt="SignUp icon">
                 <h3>SignUp</h3>
-                <img src="" alt="LogIn icon">
+                <img src="assets/Icons/Sign in-up icon.png" alt="LogIn icon">
                 <h3>LogIn</h3>
             </section>
             <section>
                 <h3>Contact Us</h3>
                 <img src="assets/Icons/MessageIcon.png" alt="Mail icon">
                 <p><a href="mail.google.com">trackgenix@gmail.com</a></p>
-                <img src="assets/Icons/Call.png" alt="Call icon">
+                <img src="assets/Icons/Telephone icon.png" alt="Call icon">
                 <p>(000) 000-0000</p>
-                <img src="assets/Icons/Home work.png" alt="Location icon">
+                <img src="assets/Icons/Location icon.png" alt="Location icon">
                 <p>1234 Somewhere Road #8254 Nashville, TN 00000-0000</p>
             </section>
         </aside>
