--- a/Semana-01/index.html
+++ b/Semana-01/index.html
@@ -1,53 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta charset="utf-8" />
-        <meta name="descripcion" content="" />
-        <meta name="author" content="" />
-        <meta name="keywords" content="" />
-        <title>Trackgenix</title>
-    </head>
+<head>
+    <meta charset="utf-8" />
+    <meta name="descripcion" content="" />
+    <meta name="author" content="" />
+    <meta name="keywords" content="" />
+    <title>Trackgenix</title>
+</head>
 
-    <body>
-        <header>
-            <h1>Trackgenix</h1>
-            <h2>By GigaTech Software Solutions SA</h2>
+<body>
+    <header>
+        <img src="assets/LOGO trackgenix.png" alt="Logo Trackgenix">
+        <h1>Trackgenix</h1>
+        <h2>By GigaTech Software Solutions SA</h2>
+        <p>
+            "The company GigaTech Software Solutions SA provides software
+            development services to other companies,
+            which have too many employees.
+            Because of this "Trackgenix" was created.
+        </p>
+        <p>
+            “Trackgenix” is a web page that facilitates the registration of
+            hours worked by each employee in each project and provides
+            information to the companies so they can make better decisions.
+        </p>
+        <img src="assets/office.png" alt="Background image">
+    </header>
+    <aside>
+        <img src="assets/Icons/sidebar arrow.png" alt="arrow sidebar">
+        <div>
+            <h2>Trackgenix</h2>
+            <img src="assets/icons/Home icon.png" alt="Home icon">
+            <h3>Home</h3>
+            <img src="assets/Icons/Sign in-up icon.png" alt="SignUp icon">
+            <h3>SignUp</h3>
+            <img src="assets/Icons/Sign in-up icon.png" alt="LogIn icon">
+            <h3>LogIn</h3>
+        </div>
+        <div>
+            <h3>Contact Us</h3>
+            <img src="assets/Icons/MessageIcon.png" alt="Mail icon">
+            <p><a href="mail.google.com">trackgenix@gmail.com</a></p>
+            <img src="assets/Icons/Telephone icon.png" alt="Call icon">
+            <p>(000) 000-0000</p>
+            <img src="assets/Icons/Location icon.png" alt="Location icon">
+            <p>1234 Somewhere Road #8254 Nashville, TN 00000-0000</p>
+        </div>
+    </aside>
+    <main>
+        <section>
+            <h2>Who We Are</h2>
             <p>
-                "The company GigaTech Software Solutions SA provides software
-                 development services to other companies,
-                 which have too many employees.
-                 Because of this "Trackgenix" was created.
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                industry's
+                standard dummy text ever since the 1500s, when
+                an unknown printer took a galley of type and scrambled it to make a type specimen book.Lorem Ipsum is
+                simply
+                dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy
+                text
+                ever since the 1500s, when
+                an unknown printer took a galley of type and scrambled it to make a type specimen book.Lorem Ipsum is
+                simply
+                dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy
+                text
+                ever since the 1500s, when
+                an unknown printer took a galley of type and scrambled it to make a type specimen book.
             </p>
             <p>
-                “Trackgenix” is a web page that facilitates the registration of
-                 hours worked by each employee in each project and provides 
-                 information to the companies so they can make better decisions.
-            </p>  
-            <img src="assets/alex-kotliarskyi-QBpZGqEMsKg-unsplash 1.png" 
-            alt="Background image">     
-        </header>
-        <aside>
-            <section>
-                <h2>Trackgenix</h2>
-                <img src="assets/icons/Home icon.png" alt="Home icon">
-                <h3>Home</h3>
-                <img src="assets/Icons/Sign in-up icon.png" alt="SignUp icon">
-                <h3>SignUp</h3>
-                <img src="assets/Icons/Sign in-up icon.png" alt="LogIn icon">
-                <h3>LogIn</h3>
-            </section>
-            <section>
-                <h3>Contact Us</h3>
-                <img src="assets/Icons/MessageIcon.png" alt="Mail icon">
-                <p><a href="mail.google.com">trackgenix@gmail.com</a></p>
-                <img src="assets/Icons/Telephone icon.png" alt="Call icon">
-                <p>(000) 000-0000</p>
-                <img src="assets/Icons/Location icon.png" alt="Location icon">
-                <p>1234 Somewhere Road #8254 Nashville, TN 00000-0000</p>
-            </section>
-        </aside>
-
-    </body>
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                industry's
+                standard dummy text ever since the 1500s, when
+                an unknown printer took a galley of type and scrambled it to make a type specimen book.Lorem Ipsum is
+                simply
+                dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy
+                text
+                ever since the 1500s, when
+                an unknown printer took a galley of type and scrambled it to make a type specimen book.
+            </p>
+        </section>
+        <section>
+            <h2>Why choose us?</h2>
+            <div>
+                <h3>Productivity Booster</h3>
+                <img src="assets/producti 1.png" alt="Productivity Booster">
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's
+                    standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+                    scrambled it
+                    to
+                    make
+                    a type specimen book.
+                </p>
+            </div>
+            <div>
+                <h3>Work Traceability</h3>
+                <img src="assets/work traceability.png" alt="work Traceability">
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
+                    and
+                    scrambled it to make a type specimen book.
+                </p>
+            </div>
+            <div>
+                <h3>Leadership and team management</h3>
+                <img src="assets/liderazgo 1.png" alt="Leadership and team management">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, aliquam neque corporis deserunt
+                    exercitationem quos tenetur hic dignissimos quas nemo minima aspernatur consequatur similique. Unde
+                    quas
+                    ullam blanditiis dolores officia!
+                </p>
+            </div>
+            <div>
+                <h3>Decision making</h3>
+                <img src="assets/toma de decisio 1.png" alt="Decision making">
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni, aspernatur eaque consequatur
+                    molestiae
+                    expedita, aut qui natus eius optio sapiente libero autem voluptas quos quis quia possimus ducimus!
+                    Facilis,
+                    eius?
+                </p>
+            </div>
+        </section>
+    </main>
+</body>
 
 </html>
