All sections done, missing ids

--- a/Semana-01/index.html
+++ b/Semana-01/index.html
@@ -126,6 +126,97 @@
                 </p>
             </div>
         </section>
+        <section>
+            <h3>Functionalities</h3>
+            <div>
+                <img src="assets/Icons/Hours Log.png" alt="Hours Log">
+                <h4>Hours log</h4>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa expedita sunt dolor quibusdam
+                    deleniti
+                    molestias, pariatur maiores id et officia. Voluptatum magnam quae beatae voluptas ipsam quibusdam
+                    labore unde. Repellat.
+                </p>
+            </div>
+            <div>
+                <img src="assets/Icons/Resource Management.png" alt="Resource management">
+                <h4>Resource management</h4>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa expedita sunt dolor quibusdam
+                    deleniti
+                    molestias, pariatur maiores id et officia. Voluptatum magnam quae beatae voluptas ipsam quibusdam
+                    labore unde. Repellat.
+                </p>
+            </div>
+            <div>
+                <img src="assets/Icons/Reports.png" alt="Reports">
+                <h4>Reports</h4>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa expedita sunt dolor quibusdam
+                    deleniti
+                    molestias, pariatur maiores id et officia. Voluptatum magnam quae beatae voluptas ipsam quibusdam
+                    labore unde. Repellat.
+                </p>
+            </div>
+            <div>
+                <img src="assets/Icons/Multiple Roles.png" alt="Multiple roles">
+                <h4>Multiple roles</h4>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa expedita sunt dolor quibusdam
+                    deleniti
+                    molestias, pariatur maiores id et officia. Voluptatum magnam quae beatae voluptas ipsam quibusdam
+                    labore unde. Repellat.
+                </p>
+            </div>
+        </section>
+        <section>
+            <form action="" method="post">
+                <label for="name">Name</label>
+                <input type="text" id="name" name="name" placeholder="Your Name Here">
+                <label for="email">Email</label>
+                <input type="text" id="email" name="email" placeholder="Your Email Here">
+                <select required>
+                    <option value=""></option>
+                    <option value=""></option>
+                    <option value=""></option>
+                </select>
+                <label>Message</label>
+                <textarea id="message" name="message" placeholder="Your Message Here"></textarea>
+                <input type="submit" id="submitbtn" value="Send message">
+                <input type="reset" id="resetbtn" value="Reset">
+                <button type="submit">Send message</button>
+            </form>
+        </section>
+        <section>
+            <img src="assets/jj-ying-7JX0-bfiuxQ-unsplash 1.png" alt="Background">
+            <div id="productsol">
+                <h5>Products</h5>
+                <ol>
+                    <li>Features</li>
+                    <li>Downloads</li>
+                    <li>Integrations</li>
+                    <li>Additional features</li>
+                </ol>
+            </div>
+            <div id="enterpriseol">
+                <h5>Enterprise</h5>
+                <ol>
+                    <li>About us</li>
+                    <li>Clients</li>
+                    <li>Resources</li>
+                    <li>Blog</li>
+                </ol>
+            </div>
+            <div id="supportol">
+                <h5>Support</h5>
+                <ol>
+                    <li>Help</li>
+                    <li>Tutorials</li>
+                    <li>API</li>
+                    <li>Contact</li>
+                </ol>
+            </div>
+        </section>
     </main>
 </body>
 
