--- a/Semana-01/index.html
+++ b/Semana-01/index.html
@@ -15,15 +15,12 @@
         <h1>Trackgenix</h1>
         <h2>By GigaTech Software Solutions SA</h2>
         <p>
-            "The company GigaTech Software Solutions SA provides software
-            development services to other companies,
-            which have too many employees.
-            Because of this "Trackgenix" was created.
+            "The company GigaTech Software Solutions SA provides software development services to other companies, which
+            have too many employees. Because of this "Trackgenix" was created.
         </p>
         <p>
-            “Trackgenix” is a web page that facilitates the registration of
-            hours worked by each employee in each project and provides
-            information to the companies so they can make better decisions.
+            “Trackgenix” is a web page that facilitates the registration of hours worked by each employee in each
+            project and provides information to the companies so they can make better decisions.
         </p>
         <img src="assets/office.png" alt="Background image">
     </header>
@@ -31,21 +28,33 @@
         <img src="assets/Icons/sidebar arrow.png" alt="arrow sidebar">
         <div>
             <h2>Trackgenix</h2>
-            <img src="assets/icons/Home icon.png" alt="Home icon">
-            <h3>Home</h3>
-            <img src="assets/Icons/Sign in-up icon.png" alt="SignUp icon">
-            <h3>SignUp</h3>
-            <img src="assets/Icons/Sign in-up icon.png" alt="LogIn icon">
-            <h3>LogIn</h3>
+            <div id="homebtn">
+                <img src="assets/icons/Home icon.png" alt="Home icon">
+                <h3>Home</h3>
+            </div>
+            <div id="signinbtn">
+                <img src="assets/Icons/Sign in-up icon.png" alt="SignUp icon">
+                <h3>SignUp</h3>
+            </div>
+            <div id="loginbtn">
+                <img src="assets/Icons/Sign in-up icon.png" alt="LogIn icon">
+                <h3>LogIn</h3>
+            </div>
         </div>
         <div>
             <h3>Contact Us</h3>
-            <img src="assets/Icons/MessageIcon.png" alt="Mail icon">
-            <p><a href="mail.google.com">trackgenix@gmail.com</a></p>
-            <img src="assets/Icons/Telephone icon.png" alt="Call icon">
-            <p>(000) 000-0000</p>
-            <img src="assets/Icons/Location icon.png" alt="Location icon">
-            <p>1234 Somewhere Road #8254 Nashville, TN 00000-0000</p>
+            <div id="emailcontact">
+                <img src="assets/Icons/MessageIcon.png" alt="Mail icon">
+                <p><a href="mail.google.com">trackgenix@gmail.com</a></p>
+            </div>
+            <div id="callcontact">
+                <img src="assets/Icons/Telephone icon.png" alt="Call icon">
+                <p>(000) 000-0000</p>
+            </div>
+            <div id="locationcontact">
+                <img src="assets/Icons/Location icon.png" alt="Location icon">
+                <p>1234 Somewhere Road #8254 Nashville, TN 00000-0000</p>
+            </div>
         </div>
     </aside>
     <main>
@@ -176,15 +185,15 @@
                 <label for="email">Email</label>
                 <input type="text" id="email" name="email" placeholder="Your Email Here">
                 <select required>
-                    <option value=""></option>
-                    <option value=""></option>
-                    <option value=""></option>
+                    <option value="Contact area"  selected disabled hidden>Contact area</option>
+                    <option value="Human Resources">Human Resources</option>
+                    <option value="Systems">Systems</option>
+                    <option value="Commercialization">Commercialization</option>
                 </select>
-                <label>Message</label>
-                <textarea id="message" name="message" placeholder="Your Message Here"></textarea>
-                <input type="submit" id="submitbtn" value="Send message">
-                <input type="reset" id="resetbtn" value="Reset">
-                <button type="submit">Send message</button>
+                <label for="message">Message</label>
+                <textarea id="message" name="message" placeholder="Your Message Here"></textarea>            
+                <button type="submit" id="submitbtn">Send message</button>
+                <button type="reset" id="resetbtn">Reset</button>
             </form>
         </section>
         <section>
@@ -218,6 +227,9 @@
             </div>
         </section>
     </main>
+    <footer>
+
+    </footer>
 </body>
 
 </html>
