Finished footer and README writed

--- a/Semana-01/index.html
+++ b/Semana-01/index.html
@@ -3,9 +3,12 @@
 
 <head>
     <meta charset="utf-8" />
-    <meta name="descripcion" content="" />
-    <meta name="author" content="" />
-    <meta name="keywords" content="" />
+    <meta name="descripcion"
+        content="This page allows employees to have a register of hours of work, rate and register their projects" />
+    <meta name="author" content="Cristian Gerster" />
+    <meta name="keywords"
+        content="employee, work, reports, hours log, roles, Resource, leadership, team, management, traceability,
+         Productivity, Booster" />
     <title>Trackgenix</title>
 </head>
 
@@ -45,7 +48,7 @@
             <h3>Contact Us</h3>
             <div id="emailcontact">
                 <img src="assets/Icons/MessageIcon.png" alt="Mail icon">
-                <p><a href="mail.google.com">trackgenix@gmail.com</a></p>
+                <p><a href="https://mail.google.com" target="_blank">trackgenix@gmail.com</a></p>
             </div>
             <div id="callcontact">
                 <img src="assets/Icons/Telephone icon.png" alt="Call icon">
@@ -58,7 +61,7 @@
         </div>
     </aside>
     <main>
-        <section>
+        <section id="whoweare">
             <h2>Who We Are</h2>
             <p>
                 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
@@ -88,7 +91,7 @@
                 an unknown printer took a galley of type and scrambled it to make a type specimen book.
             </p>
         </section>
-        <section>
+        <section id="whychooseus">
             <h2>Why choose us?</h2>
             <div>
                 <h3>Productivity Booster</h3>
@@ -135,7 +138,7 @@
                 </p>
             </div>
         </section>
-        <section>
+        <section id="functionalities">
             <h3>Functionalities</h3>
             <div>
                 <img src="assets/Icons/Hours Log.png" alt="Hours Log">
@@ -178,25 +181,25 @@
                 </p>
             </div>
         </section>
-        <section>
+        <section id="contactform">
             <form action="" method="post">
                 <label for="name">Name</label>
                 <input type="text" id="name" name="name" placeholder="Your Name Here">
                 <label for="email">Email</label>
                 <input type="text" id="email" name="email" placeholder="Your Email Here">
                 <select required>
-                    <option value="Contact area"  selected disabled hidden>Contact area</option>
+                    <option value="Contact area" selected disabled hidden>Contact area</option>
                     <option value="Human Resources">Human Resources</option>
                     <option value="Systems">Systems</option>
                     <option value="Commercialization">Commercialization</option>
                 </select>
                 <label for="message">Message</label>
-                <textarea id="message" name="message" placeholder="Your Message Here"></textarea>            
+                <textarea id="message" name="message" placeholder="Your Message Here"></textarea>
                 <button type="submit" id="submitbtn">Send message</button>
                 <button type="reset" id="resetbtn">Reset</button>
             </form>
         </section>
-        <section>
+        <section id="moresections">
             <img src="assets/jj-ying-7JX0-bfiuxQ-unsplash 1.png" alt="Background">
             <div id="productsol">
                 <h5>Products</h5>
@@ -228,7 +231,20 @@
         </section>
     </main>
     <footer>
-
+        <div>
+            <a href="https://www.linkedin.com/in/gerstercristian/" target="_blank"><img
+                    src="assets/Icons/LinkedIn - Negative.png" alt="LinkedIn"></a>
+            <a href="https://www.facebook.com" target="_blank"><img src="assets/Icons/Facebook - Negative.png"
+                    alt="Facebook"></a>
+            <a href="https://www.twitter.com" target="_blank"><img src="assets/Icons/Twitter - Negative.png"
+                    alt="Twitter"></a>
+            <a href="https://www.instagram.com" target="_blank"><img src="assets/Icons/Instagram - Negative.png"
+                    alt="Instagram"></a>
+            <a href="https://www.github.com/ProDIGGY-vinilos" target="_blank"><img
+                    src="assets/Icons/Github - Negative.png" alt="Github"></a>
+        </div>
+        <h6>Rosario, Argentina</h6>
+        <h6>Copyright 2022 Radium Rocket. All rights reserved</h6>
     </footer>
 </body>
 
