id's added to all sections and divs needed

--- a/Semana-01/index.html
+++ b/Semana-01/index.html
@@ -93,7 +93,7 @@
         </section>
         <section id="whychooseus">
             <h2>Why choose us?</h2>
-            <div>
+            <div id="productivitysection">
                 <h3>Productivity Booster</h3>
                 <img src="assets/producti 1.png" alt="Productivity Booster">
                 <p>
@@ -106,7 +106,7 @@
                     a type specimen book.
                 </p>
             </div>
-            <div>
+            <div id="traceabilitysection">
                 <h3>Work Traceability</h3>
                 <img src="assets/work traceability.png" alt="work Traceability">
                 <p>
@@ -116,7 +116,7 @@
                     scrambled it to make a type specimen book.
                 </p>
             </div>
-            <div>
+            <div id="managementsection">
                 <h3>Leadership and team management</h3>
                 <img src="assets/liderazgo 1.png" alt="Leadership and team management">
                 <p>
@@ -126,7 +126,7 @@
                     ullam blanditiis dolores officia!
                 </p>
             </div>
-            <div>
+            <div id="decisionmakingsection">
                 <h3>Decision making</h3>
                 <img src="assets/toma de decisio 1.png" alt="Decision making">
                 <p>
@@ -140,7 +140,7 @@
         </section>
         <section id="functionalities">
             <h3>Functionalities</h3>
-            <div>
+            <div id="hourslog">
                 <img src="assets/Icons/Hours Log.png" alt="Hours Log">
                 <h4>Hours log</h4>
                 <p>
@@ -150,7 +150,7 @@
                     labore unde. Repellat.
                 </p>
             </div>
-            <div>
+            <div id="resourcemanagement">
                 <img src="assets/Icons/Resource Management.png" alt="Resource management">
                 <h4>Resource management</h4>
                 <p>
@@ -160,7 +160,7 @@
                     labore unde. Repellat.
                 </p>
             </div>
-            <div>
+            <div id="reports">
                 <img src="assets/Icons/Reports.png" alt="Reports">
                 <h4>Reports</h4>
                 <p>
@@ -170,7 +170,7 @@
                     labore unde. Repellat.
                 </p>
             </div>
-            <div>
+            <div id="multipleroles">
                 <img src="assets/Icons/Multiple Roles.png" alt="Multiple roles">
                 <h4>Multiple roles</h4>
                 <p>
@@ -231,7 +231,7 @@
         </section>
     </main>
     <footer>
-        <div>
+        <div id="socialmedia">
             <a href="https://www.linkedin.com/in/gerstercristian/" target="_blank"><img
                     src="assets/Icons/LinkedIn - Negative.png" alt="LinkedIn"></a>
             <a href="https://www.facebook.com" target="_blank"><img src="assets/Icons/Facebook - Negative.png"
