BaSP-W01-2022: Copyright logo and sintax errors fixed

--- a/Semana-01/index.html
+++ b/Semana-01/index.html
@@ -241,7 +241,7 @@
                     src="assets/Icons/Github - Negative.png" alt="Github"></a>
             </div>
             <h6>Rosario, Argentina</h6>
-            <h6>Copyright 2022 Radium Rocket. All rights reserved</h6>
+            <h6>Copyright &copy; 2022 Radium Rocket. All rights reserved</h6>
         </footer>
     </body>
 
