BaSP-W02-2022:Header done

--- a/Semana-02/index.html
+++ b/Semana-02/index.html
@@ -6,8 +6,8 @@
     <meta name="descripcion"
         content="This page allows employees to have a register of hours of work, rate and register their projects" />
     <meta name="author" content="Cristian Gerster" />
-    <meta name="keywords" content="employee, work, reports, hours log, roles, Resource, leadership, team, management, traceability,
-            Productivity, Booster" />
+    <meta name="keywords" content="employee, work, reports, hours log, roles, Resource, leadership, team, management,
+     traceability, Productivity, Booster" />
     <title>Trackgenix</title>
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -16,52 +16,56 @@
 <body>
     <aside>
         <div id="upperaside">
-            <img id="background" src="assets/LOGO trackgenix.png" alt="Logo Trackgenix">
+            <img src="assets/LOGO trackgenix.png" alt="Logo Trackgenix">
             <h2>Trackgenix</h2>
-            <img src="assets/Icons/sidebar arrow.png" alt="arrow sidebar">
+            <img id="arrow" src="assets/Icons/sidebar arrow.png" alt="arrow sidebar">
         </div>
         <div id="optionsidebar">
-            <div id="homebtn">
+            <div>
                 <img src="assets/icons/Home icon.png" alt="Home icon">
-                <h3>Home</h3>
+                <h3 class="icontext">Home</h3>
             </div>
-            <div id="signinbtn">
+            <div>
                 <img src="assets/Icons/Sign in-up icon.png" alt="SignUp icon">
-                <h3>SignUp</h3>
+                <h3 class="icontext">SignUp</h3>
             </div>
-            <div id="loginbtn">
+            <div>
                 <img src="assets/Icons/Sign in-up icon.png" alt="LogIn icon">
-                <h3>LogIn</h3>
+                <h3 class="icontext">LogIn</h3>
             </div>
         </div>
-        <div>
+        <div id="contactsidebar">
             <h3>Contact Us</h3>
-            <div id="emailcontact">
+            <div class="lineorange"></div>
+            <div>
                 <img src="assets/Icons/MessageIcon.png" alt="Mail icon">
-                <p><a href="https://mail.google.com" target="_blank">trackgenix@gmail.com</a></p>
+                <p class="icontext"><a href="https://mail.google.com" target="_blank">trackgenix@gmail.com</a></p>
             </div>
-            <div id="callcontact">
+            <div>
                 <img src="assets/Icons/Telephone icon.png" alt="Call icon">
-                <p>(000) 000-0000</p>
+                <p class="icontext">(000) 000-0000</p>
             </div>
-            <div id="locationcontact">
+            <div>
                 <img src="assets/Icons/Location icon.png" alt="Location icon">
-                <p>1234 Somewhere Road #8254 Nashville, TN 00000-0000</p>
+                <p class="icontext">1234 Somewhere Road #8254 Nashville, TN 00000-0000</p>
             </div>
         </div>
     </aside>
     <header>
-        <h1>Trackgenix</h1>
-        <h2>By GigaTech Software Solutions SA</h2>
-        <p>
-            "The company GigaTech Software Solutions SA provides software development services to other companies,
-            which
-            have too many employees. Because of this "Trackgenix" was created.
-        </p>
-        <p>
-            “Trackgenix” is a web page that facilitates the registration of hours worked by each employee in each
-            project and provides information to the companies so they can make better decisions.
-        </p>
+        <div id="textheader">
+            <h1>Trackgenix</h1>
+            <div class="linegreen"></div>
+            <h2>By GigaTech Software Solutions SA</h2>
+            <p>
+                "The company GigaTech Software Solutions SA provides software development services to other companies,
+                which
+                have too many employees. Because of this "Trackgenix" was created.
+            </p>
+            <p>
+                “Trackgenix” is a web page that facilitates the registration of hours worked by each employee in each
+                project and provides information to the companies so they can make better decisions.
+            </p>
+        </div>
     </header>
     <main>
         <section id="whoweare">
