BaSP-W02-2022: Base whychooseus done

--- a/Semana-02/index.html
+++ b/Semana-02/index.html
@@ -54,12 +54,12 @@
                 <a href="">
                     <i class="fa-solid fa-phone fa-xl"></i>
                     <p class="side-text">(000) 000-0000</p>
-                </a>    
+                </a>
             </div>
             <div class="contact-option">
                 <a href="">
                     <i id="location-icon" class="fa-solid fa-location-dot fa-xl""></i>
-                    <p class="side-text">1234 Somewhere Road #8254 Nashville, TN 00000-0000</p>
+                    <p class=" side-text">1234 Somewhere Road #8254 Nashville, TN 00000-0000</p>
                 </a>
             </div>
         </div>
@@ -122,23 +122,26 @@
             <h2 class="title">Why choose us?</h2>
             <div class="titlebar"></div>
             <div id="productivitysection">
-                <h3 class="title">Productivity Booster</h3>
-                <img src="assets/producti 1.png" alt="Productivity Booster">
-                <p>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                    the
-                    industry's
-                    standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-                    scrambled it
-                    to
-                    make
-                    a type specimen book.
-                </p>
+                <div class="text-why-left">
+                    <h3 class="title">Productivity Booster</h3>
+                    <div class="subtitle-bar-left"></div>
+                    <p class="p-why-left">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                        the
+                        industry's
+                        standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+                        scrambled it
+                        to
+                        make
+                        a type specimen book.
+                    </p>
+                </div>
+                <img class="img-why-right" src="assets/producti 1.png" alt="Productivity Booster">
             </div>
             <div id="traceabilitysection">
                 <h3 class="title">Work Traceability</h3>
-                <img src="assets/work traceability.png" alt="work Traceability">
-                <p>
+                <div class="subtitle-bar-right"></div>
+                <p class="p-why-right">
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
                     the
                     industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
@@ -146,11 +149,13 @@
                     and
                     scrambled it to make a type specimen book.
                 </p>
+                <img class="img-why-left" src="assets/work traceability.png" alt="work Traceability">
             </div>
             <div id="managementsection">
                 <h3 class="title">Leadership and team management</h3>
-                <img src="assets/liderazgo 1.png" alt="Leadership and team management">
-                <p>
+                <div class="subtitle-bar-left"></div>
+                <img class="img-why-right" src="assets/liderazgo 1.png" alt="Leadership and team management">
+                <p class="p-why-left">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, aliquam neque corporis deserunt
                     exercitationem quos tenetur hic dignissimos quas nemo minima aspernatur consequatur similique.
                     Unde
@@ -160,8 +165,9 @@
             </div>
             <div id="decisionmakingsection">
                 <h3 class="title">Decision making</h3>
-                <img src="assets/toma de decisio 1.png" alt="Decision making">
-                <p>
+                <div class="subtitle-bar-right"></div>
+                <img class="img-why-left" src="assets/toma de decisio 1.png" alt="Decision making">
+                <p class="p-why-right">
                     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni, aspernatur eaque consequatur
                     molestiae
                     expedita, aut qui natus eius optio sapiente libero autem voluptas quos quis quia possimus
