BaSP-W02-2022: whyhooseus done

--- a/Semana-02/index.html
+++ b/Semana-02/index.html
@@ -119,12 +119,12 @@
             </p>
         </section>
         <section id="whychooseus">
-            <h2 class="title">Why choose us?</h2>
-            <div class="titlebar"></div>
             <div id="productivitysection">
+                <h2 class="title">Why choose us?</h2>
+                <div class="titlebar"></div>
                 <div class="text-why-left">
                     <h3 class="title">Productivity Booster</h3>
-                    <div class="subtitle-bar-left"></div>
+                    <div class="subtitle-bar"></div>
                     <p class="p-why-left">
                         Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
                         the
@@ -138,43 +138,50 @@
                 </div>
                 <img class="img-why-right" src="assets/producti 1.png" alt="Productivity Booster">
             </div>
-            <div id="traceabilitysection">
-                <h3 class="title">Work Traceability</h3>
-                <div class="subtitle-bar-right"></div>
-                <p class="p-why-right">
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                    the
-                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
-                    type
-                    and
-                    scrambled it to make a type specimen book.
-                </p>
+            <div id="traceability-section">
                 <img class="img-why-left" src="assets/work traceability.png" alt="work Traceability">
+                <div class="text-why-right">
+                    <h3 class="title">Work Traceability</h3>
+                    <div class="subtitle-bar-right"></div>
+                    <p class="p-why-right">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                        the
+                        industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
+                        type
+                        and
+                        scrambled it to make a type specimen book.
+                    </p>
+                </div>
+
             </div>
-            <div id="managementsection">
-                <h3 class="title">Leadership and team management</h3>
-                <div class="subtitle-bar-left"></div>
+            <div id="management-section">
+                <div class="text-why-left">
+                    <h3 class="title">Leadership and team management</h3>
+                    <div id="subtitle-bar-grey"></div>
+                    <p class="p-why-left">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, aliquam neque corporis deserunt
+                        exercitationem quos tenetur hic dignissimos quas nemo minima aspernatur consequatur similique.
+                        Unde
+                        quas
+                        ullam blanditiis dolores officia!
+                    </p>
+                </div>
                 <img class="img-why-right" src="assets/liderazgo 1.png" alt="Leadership and team management">
-                <p class="p-why-left">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, aliquam neque corporis deserunt
-                    exercitationem quos tenetur hic dignissimos quas nemo minima aspernatur consequatur similique.
-                    Unde
-                    quas
-                    ullam blanditiis dolores officia!
-                </p>
             </div>
-            <div id="decisionmakingsection">
-                <h3 class="title">Decision making</h3>
-                <div class="subtitle-bar-right"></div>
+            <div id="decision-making-section">
                 <img class="img-why-left" src="assets/toma de decisio 1.png" alt="Decision making">
-                <p class="p-why-right">
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni, aspernatur eaque consequatur
-                    molestiae
-                    expedita, aut qui natus eius optio sapiente libero autem voluptas quos quis quia possimus
-                    ducimus!
-                    Facilis,
-                    eius?
-                </p>
+                <div class="text-why-right">
+                    <h3 class="title">Decision making</h3>
+                    <div class="subtitle-bar-right"></div>
+                    <p class="p-why-right">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni, aspernatur eaque consequatur
+                        molestiae
+                        expedita, aut qui natus eius optio sapiente libero autem voluptas quos quis quia possimus
+                        ducimus!
+                        Facilis,
+                        eius?
+                    </p>
+                </div>
             </div>
         </section>
         <section id="functionalities">
